# sdl-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.cpp  audio.h  draw.cpp  draw.h  drawer.cpp  drawer.h  font.cpp  font.h  font_t.cpp  font_t.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  shared.cpp  shared.h  types.h
actor/: actor.cpp  actor.h  ball.cpp  ball.h  label.cpp  label.h  paddle.cpp  paddle.h  wall.cpp  wall.h
fmod/: audio.cpp  audio.h  sound_event.cpp  sound_event.h
math/: math.cpp  math.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
